bug: added missing alpha TW colors broken in previous refactor
This is a feature and a bug. The tailwind colors were broken due to leaving off the alpha css var generation feature. The styles are showing and the feature has been added.

--- a/apps/leaf-docs/styles/globals.css
+++ b/apps/leaf-docs/styles/globals.css
@@ -17,7 +17,7 @@
 }
 
 .button-el {
-  @apply btn-md btn-base bg-primary-color;
+  @apply btn-md btn-base bg-primary border-2 border-primary;
 }
 
 .input-el {
